add trasition animation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:id="@+id/show_activity_anim1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="show activity"
+            android:text="Default"
             app:layout_constraintBottom_toTopOf="@id/show_activity_anim2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
             android:id="@+id/show_activity_anim2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="show activity"
+            android:text="Fade"
             app:layout_constraintBottom_toTopOf="@id/show_activity_anim3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:id="@+id/show_activity_anim3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="show activity"
+            android:text="Slide"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
